--- a/src/components/Profile/ProfileMenu/ProfileMenu.module.css
+++ b/src/components/Profile/ProfileMenu/ProfileMenu.module.css
@@ -1,7 +1,8 @@
 .ProfileMenuContainer {
     display: flex;
     flex-direction: row;
-    margin: -20px 0 0 -40px;
+    margin: -20px 0 0 0;
+    padding-bottom: 1rem;
 }
 
 .ProfileMenu {
